feat: optimize database queries and add Redis caching